2002-02-16  Ian Lance Taylor  <ian@airs.com>

	* uucp.c (main): Check for unsupported whitespace in notification
	address.
	* uux.c (main): Likewise.

	* unix/splcmd.c (zsysdep_spool_commands): Check for unsupported
	use of white space.

2002-02-14  Ian Lance Taylor  <ian@airs.com>

	* unix/uid.c (fsuser_perms): Add piegid parameter.  Change all
	callers.
	(fsuucp_perms): Add iegid parameter.  Change all callers.
	* sysdep.h (fsuser_perms, fsuucp_perms): Update declarations.

	* John Hughes: uuconf.h (struct uuconf_system): Add
	uuconf_cmax_file_time field.
	* uuconf/syssub.c (SYSTEM_INTEGERS): Add cmax_file_time.
	* uuconf/tsinfo.c (asIcmds): Add max-file-time command.
	* trans.c (floop): Check maximum file send time.
	* uuchk.c (ukshow): Print maximum file send time.
	* uucp.texi (File Transfer Control): Document max-file-time.

	* send.c (flocal_send_await_reply): Only seek to the end of the
	file if we are already sending it.

	* trans.c (utransfree): If the file is open, close it.
	* rec.c (flocal_rec_await_reply): Don't bother closing the file on
	error.
	(fremote_send_reply): Likewise.  Set the e field to EFILECLOSED
	after closing it.
	(frec_file_end): Likewise.
	* send.c (fremote_rec_reply): Set the e field to EFILECLOSED after
	closing it.
	(fsend_await_confirm): Likewise.

	* John Hughes: trans.c (struct sreceive_ack): Move definition
	before local function prototypes.
	(utfree_queue): New static function.
	(uclear_queue): Use utfree_queue and utfree_acked.
	(utfree_receive_ack): New static function.
	(uwindow_acked): Use utfree_receive_ack.
	(utfree_acked): New static function.

	* lib/buffer.c: Add MALLOC_BUFFERS case to use malloc/free for
	each buffer, to permit easy use of debugging malloc.

	* chat.c (fcsend): Permit \M and \m in any type of chat script.
	* uucp.texi (Chat Scripts): Document \M and \m here.
	(dial File): Don't document \M and \m here.

	* uuconf/chatc.c (_uuconf_ichat_cmd): Treat chat-program used with